    * The filewrap and wrapdir options for r.Run() previously did not
      wrap fopen64 or freopen64. (CNY-3405)
    * Previously, user and password information for the http/https proxy
      were visible in a traceback if a network exception occured. (RBL-5191)
    * Split out info packages from jobs even when RPM capsules are
      used (CNY-3387)

  o Internal Changes:

Changes in 2.1.14:
  o Bug Fixes:
    * Disable diff/patch merging for RPM config files (CNY-3399)

  o New Features:
    * Added support for RPM capsules to ChangesetExploder class

  o Internal Changes:
    * Added file flags to allow conary to override file contents and attributes
      for capsule-based files (such as from RPM).
    * Changesets are now loaded incrementally rather than as one big string;
      this avoids a potentially large memory spike opening large changesets
    * Added slots to various stream and trove objects
    * StreamCollections are intialized as if thawing an empty string rather
      than instantiating all of the child elements (which are often not needed
      anyway). This reduces total ram usage by more than 5% on large
      changesets.

Changes in 2.1.13:
  o Bug Fixes:
    * Fixed crash in lookaside.fetchURL when accessing an authenticated http
      URI using python 2.6.5. (CNY-3393)
    * Changes for sharing files with different fileIDs are now done for
      non-encapsulated files as well. (CNY-3396)
    * Installing critical packages as part of jobs which cannot be split
      due to capsules no longer causes an exception.
    * The Conary command-line client will no longer traceback when command
      specific options are given without a command
      (e.g. 'conary --what-requires'). (CNY-3364)

Changes in 2.1.12:
  o New Features:
    * Config files from RPM capsules are now handled by Conary instead of
      RPM, including diff/patch merging.
    * Emulate RPM file coloring behavior to allow a package to take